<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    >
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:id="@+id/question"/>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="3dip"
        android:orientation="horizontal">
    
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#F00"
        android:text="@string/totalcount"/>
    
     <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F00"
        android:id="@+id/total"
        android:text="@string/wspace"/>
    
    </LinearLayout>
    
        <View android:layout_width="fill_parent" 
     android:layout_height="2dip" 
     android:background="@android:drawable/divider_horizontal_dark"></View>

<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="5">
  
<TableLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:showDividers="middle"
    android:divider="@android:drawable/divider_horizontal_dark"    
    android:orientation="horizontal"
    android:baselineAligned="true"
    android:id="@+id/tallytable">
  
    <TableRow android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="5dip">
  
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"/>
        
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"/>
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/percent"
            android:textStyle="bold"/>
        
    </TableRow>
      
</TableLayout>

</ScrollView>

<LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.5"
    android:padding="2dip"
    android:orientation="horizontal">
    
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/restart"
        android:text="@string/restart"/>
    
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/exit"
        android:text="@string/exit"/>
    
</LinearLayout>

</LinearLayout>
