<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/counter"
        android:textStyle="bold"/>
    
     <View android:layout_width="fill_parent" 
     android:layout_height="1dip" 
     android:background="@android:drawable/divider_horizontal_dark"></View>	
     
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal">
     
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/totreads"/>
     
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/reading"
         android:textColor="#F00"
         android:text="@string/zero"/>
     </LinearLayout>
     
     
       
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     
        <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"         
         android:orientation="vertical">
       
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/counter"
         android:layout_gravity="center"
         android:orientation="vertical"></LinearLayout>
         
              <View android:layout_width="fill_parent" 
     android:layout_height="1dip" 
     android:background="@android:drawable/divider_horizontal_dark"></View>	
     
     <Button android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:id="@+id/donecount"
         android:text="@string/done"/>
     </LinearLayout>
       </ScrollView>
                 

</LinearLayout>
