<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
	android:gravity="center_vertical"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:orientation="vertical" >

      <TextView
           android:id="@+id/textView1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:text="@string/enterq"
           android:textAppearance="?android:attr/textAppearanceMedium" />
      
       <View android:layout_width="fill_parent" 
     android:layout_height="1dip" 
     android:background="@android:drawable/divider_horizontal_dark"></View>	

  <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />
  
   <View android:layout_width="fill_parent" 
     android:layout_height="1dip" 
     android:background="@android:drawable/divider_horizontal_dark"></View>	
  
      <TextView
           android:id="@+id/textView2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:text="@string/enteropt"
           android:textAppearance="?android:attr/textAppearanceMedium" />
      
       <View android:layout_width="fill_parent" 
     android:layout_height="1dip" 
     android:background="@android:drawable/divider_horizontal_dark"></View>	
      
      <LinearLayout android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/options"
          android:orientation="vertical">
      </LinearLayout>
      
       <View android:layout_width="fill_parent" 
     android:layout_height="1dip" 
     android:background="@android:drawable/divider_horizontal_dark"></View>	
          
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             
             <EditText android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:minWidth="150dp"
                 android:ems="10"
                 android:id="@+id/opt"/>
             
             <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/addopt"
                 android:id="@+id/addopt"/>
         </LinearLayout>
    
    <Button
        android:id="@+id/donebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:text="@string/done" />

</LinearLayout></ScrollView>
